Update to Picture

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="s-intro__content-text">
 
                         <div class="s-intro__content-pretitle text-pretitle">Hello</div>
-                        <h1 class="s-intro__content-title">
+                        <h1 class="s-intro__content-title" style="color: black;">
                         I'm Olivia Ebhodaghe <br>
                         a Software Engineer <br>
                         base in Abuja.
@@ -133,7 +133,7 @@
             </ul> <!-- end s-intro__social -->
 
             <div class="s-intro__content-media">                               
-                <img src="images/intro-bg.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg.jpg 2x" alt="">
+                <!-- <img src="images/intro-bg.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg.jpg 2x" alt=""> -->
             </div> <!-- s-intro__content-media -->                
 
             <div class="s-intro__btn-download">
